@@ -139,12 +139,23 @@ class tx_directmail_checkjumpurl {
 				$GLOBALS['TYPO3_DB']->sql_free_result($resMailing);
 				if (!$jumpurl) {
 					die('Error: No further link. Please report error to the mail sender.');
+				} else {
+					// jumpurl has been validated by lookup of id in direct_mail tables
+					// for this reason it is save to set the juHash
+					// set juHash as done for external_url in core: http://forge.typo3.org/issues/46071
+					t3lib_div::_GETset(t3lib_div::hmac($jumpurl, 'jumpurl'), 'juHash');
 				}
 			} else {
 					// jumpUrl is not an integer -- then this is a URL, that means that the "dmailerping"
 					// functionality was used to count the number of "opened mails"
 					// received (url, dmailerping)
 				$responseType = -1;
+				// Check if jumpurl is /typo3conf/ext/direct_mail/res/gfx/dmailerping.gif
+				if ($jumpurl === '/typo3conf/ext/direct_mail/res/gfx/dmailerping.gif'){
+					// set juHash as done for external_url in core: http://forge.typo3.org/issues/46071
+					t3lib_div::_GETset(t3lib_div::hmac($jumpurl, 'jumpurl'), 'juHash');
+				}
+
 			}
 
 			if ($responseType != 0) {
